Prevented the navbar from jumping to the second row in portrait orientation.

--- a/labs/meteor-client/app/client/stylesheets/portrait/style.less
+++ b/labs/meteor-client/app/client/stylesheets/portrait/style.less
@@ -22,7 +22,8 @@
 
   .navbarButton {
     height: 100px;
-    min-width: 10%;
+    width: 10%;
+    min-width: 60px;
   }
 
   .navbarTitle {
@@ -31,6 +32,9 @@
     padding-left: 5px;
     overflow: hidden;
     height: 72px;
+    width: 30%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .title {
@@ -47,5 +51,9 @@
 
   .glyphicon {
     font-size: 35px;
+  }
+
+  .myNavbar {
+    min-width: 630px;
   }
 }
